--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,18 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Archivo de compilación de nivel superior donde puede agregar opciones de configuración comunes a todos los subproyectos/módulos.
+buildscript {
+    repositories {
+        // Asegúrate de tener los siguientes dos repositorios
+        google()  // Google's Maven repository
+
+        mavenCentral()  // Maven Central repository
+
+    }
+    dependencies {
+        //Agregue la dependencia para el complemento Gradle de servicios de Google
+        classpath 'com.google.gms:google-services:4.3.15'
+
+    }
+}
 plugins {
     id 'com.android.application' version '8.0.0' apply false
     id 'com.android.library' version '8.0.0' apply false
