Parte estructural del codigo de vista implementado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:name=".Registro"
             android:exported="false" />
         <activity
+            android:name=".Historial"
+            android:exported="false" />
+        <activity
             android:name=".Home"
             android:exported="false" />
         <activity
