--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.mecanico">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Mecanico"
-        tools:targetApi="31">
+        android:theme="@style/Theme.Mecanico">
+
         <activity
             android:name=".Registro"
             android:exported="false" />
+
         <activity
             android:name=".Historial"
             android:exported="false" />
+
         <activity
             android:name=".Home"
             android:exported="false" />
+
         <activity
             android:name=".Inicio"
             android:exported="true">
         </activity>
+
         <activity
             android:name=".SplashActivity"
             android:exported="true">
