--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,12 @@ buildscript {
     dependencies {
         //Agregue la dependencia para el complemento Gradle de servicios de Google
         classpath 'com.google.gms:google-services:4.3.15'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0-RC"
 
     }
 }
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.0-RC' apply false
 }
