se corrigen errores en el search para que sea funcional

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.mecanico">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,15 +15,16 @@
 
         <activity
             android:name=".Registro"
-            android:exported="false" />
+            android:exported="true" />
 
         <activity
             android:name=".Historial"
-            android:exported="false" />
+            android:label="Historial de Inspecciones">
+        </activity>
 
         <activity
             android:name=".Home"
-            android:exported="false" />
+            android:exported="true" />
 
         <activity
             android:name=".Inicio"
