--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,17 @@
 
         <activity
             android:name=".Registro"
-            android:exported="false" />
+            android:exported="true" />
 
         <activity
             android:name=".Historial"
-            android:exported="false" />
+            android:label="Historial de Inspecciones">
+        </activity>
+
 
         <activity
             android:name=".Home"
-            android:exported="false" />
+            android:exported="true" />
 
         <activity
             android:name=".Inicio"
